--- a/app/templates/agenda/includes/event_metainfo_slider.html
+++ b/app/templates/agenda/includes/event_metainfo_slider.html
@@ -1,4 +1,4 @@
-{% load i18n mezzanine_tags event_tags %}
+{% load i18n mezzanine_tags event_tags festival_tags %}
 {% editable event.start event.end event.location %}
 <div class="event__meta--alt">
     <div class="event__meta__inner">
@@ -6,17 +6,15 @@
             <div class="split-left">
                 {{ event.start }}
                 {% if event.end %}
-                <br>
-                {% if event.end|date == event.start|date %}{{ event.end|time:"TIME_FORMAT" }}{% else %}{{ event.end }}{% endif %}
+                {% if event.end|date == event.start|date and event.end.hour|subtract:event.start.hour > 3 %}{{ event.end|time:"TIME_FORMAT" }}{% endif %}
                 {% endif %}
                 {% if event.location %}
                 <a href="{% url "event_list_location" event.location.slug %}" class="event__meta__location">{{ event.location }}</a>
                 {% endif %}
             </div>
-
             <div class="split-right">
                 <a href="{{ event.get_absolute_url }}" class="btn">
-                    <i class="icon icon__bookmark"></i> Réserver
+                    <i class="icon icon__bookmark"></i> {% trans "Booking" %}
                 </a>
             </div>
         </div>
