--- a/templates/base.html
+++ b/templates/base.html
@@ -219,8 +219,10 @@
                     Conception & réalisation : <br><br>
                     <a href="http://www.philippebarbosa.com" target="_blank" titre="Développeur front-end freelance & photographe professionnel à Paris">
                         <img src="http://www.philippebarbosa.com/wp-content/uploads/2015/07/logo.png" alt="" width="30" height="30" style="vertical-align:middle;margin-right: 0.4rem;">
-                        Philippe Barbosa
-                    </a>
+                        Philippe Barbosa</a> |
+                        <a href="http://www.ircam.com" target="_blank" titre="IRCAM">
+                        <img src="{% static "img/logo_ircam_black.png" %}" alt="Logo Manifeste 2016 ircam" width="30"> Mary Delacour / Guillaume Pellerin</a>
+
                 </p>
             </div>
         </div>
