--- a/festival/static/css/index.css
+++ b/festival/static/css/index.css
@@ -1375,39 +1375,6 @@ button:disabled {
   cursor: text;
 }
 
-/* line 139, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_buttons.scss */
-.share__button {
-  display: block;
-  text-align: center;
-  margin: 2rem auto;
-}
-
-/* line 145, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_buttons.scss */
-.btn-twitter {
-  background: #55acee;
-  color: white;
-  border-color: #2795e9;
-  margin: 0 1rem;
-}
-
-/* line 150, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_buttons.scss */
-.btn-twitter:hover {
-  background-color: #2795e9;
-}
-
-/* line 155, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_buttons.scss */
-.btn-facebook {
-  background: #3b5998;
-  color: white;
-  border-color: #2d4373;
-  margin: 0 1rem;
-}
-
-/* line 160, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_buttons.scss */
-.btn-facebook:hover {
-  background-color: #2d4373;
-}
-
 /**
  * Core styles
  */
@@ -3329,6 +3296,47 @@ th {
 /* line 41, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/modules/hero-slider.scss */
 .hero__slider__name:hover {
   color: white;
+}
+
+/* line 2, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/modules/share-links.scss */
+.share__links {
+  display: block;
+  text-align: left;
+  margin: 2rem auto;
+  padding: .3rem 0;
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
+  list-style: none;
+}
+
+/* line 12, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/modules/share-links.scss */
+.share__link__item {
+  text-transform: uppercase;
+  margin-right: 1rem;
+}
+
+/* line 17, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/modules/share-links.scss */
+.btn-twitter {
+  background: #55acee;
+  color: white;
+  border-color: #2795e9;
+}
+
+/* line 22, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/modules/share-links.scss */
+.btn-twitter:hover {
+  background-color: #2795e9;
+}
+
+/* line 27, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/modules/share-links.scss */
+.btn-facebook {
+  background: #3b5998;
+  color: white;
+  border-color: #2d4373;
+}
+
+/* line 32, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/modules/share-links.scss */
+.btn-facebook:hover {
+  background-color: #2d4373;
 }
 
 /* line 1, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/modules/calendar.scss */
