--- a/templates/includes/share_buttons.html
+++ b/templates/includes/share_buttons.html
@@ -1,8 +1,8 @@
 {% load i18n %}
 
-<div class="share__button">
-    <a class="btn btn-facebook" target="_blank" href="http://facebook.com/sharer.php?u={{ request.build_absolute_uri }}&amp;t={{ object.title|urlencode }}">{% trans "Share on Facebook" %}</a>
-    <a class="btn btn-twitter" target="_blank" href="http://twitter.com/home?status={{ object.title|urlencode }}%20{{ request.build_absolute_uri }}">{% trans "Share on Twitter" %}</a>
-    <a class="btn btn-email" href="mailto:?subject={{ object.title }}&amp;body={{ request.build_absolute_uri }}">{% trans "Share by email" %}</a>
-    <a class="btn btn-print" href="javascript:window.print()">{% trans "Print this page" %}</a>
-</div>
+<ul class="share__links list-inline">
+    <li> <a class="share__link__item  share-facebook" target="_blank" href="http://facebook.com/sharer.php?u={{ request.build_absolute_uri }}&amp;t={{ object.title|urlencode }}">{% trans "Share on Facebook" %}</a> </li>
+    <li> <a class="share__link__item  share-twitter" target="_blank" href="http://twitter.com/home?status={{ object.title|urlencode }}%20{{ request.build_absolute_uri }}">{% trans "Share on Twitter" %}</a> </li>
+    <li> <a class="share__link__item  share-email" href="mailto:?subject={{ object.title }}&amp;body={{ request.build_absolute_uri }}">{% trans "Share by email" %}</a> </li>
+    <li> <a class="share__link__item  share-print" href="javascript:window.print()">{% trans "Print this page" %}</a> </li>
+</ul>
