Share links updates

--- a/app/festival/static/scss/index.scss
+++ b/app/festival/static/scss/index.scss
@@ -79,5 +79,6 @@
         'modules/icons',
         'modules/bk-news',
         'modules/hero-slider',
+        'modules/share-links',
         'modules/calendar',
         'modules/user';
