--- a/app/festival/static/scss/modules/icons.scss
+++ b/app/festival/static/scss/modules/icons.scss
@@ -81,7 +81,7 @@
 // .icon__tags:before { content: $fa-var-tags; }
 // .icon__book:before { content: $fa-var-book; }
 .icon__bookmark:before { content: $fa-var-bookmark; }
-// .icon__print:before { content: $fa-var-print; }
+.icon__print:before { content: $fa-var-print; }
 // .icon__camera:before { content: $fa-var-camera; }
 // .icon__font:before { content: $fa-var-font; }
 // .icon__bold:before { content: $fa-var-bold; }
@@ -255,7 +255,7 @@
 // .icon__sort-desc:before { content: $fa-var-sort-desc; }
 // .icon__sort-up:before,
 // .icon__sort-asc:before { content: $fa-var-sort-asc; }
-// .icon__envelope:before { content: $fa-var-envelope; }
+.icon__envelope:before { content: $fa-var-envelope; }
 // .icon__linkedin:before { content: $fa-var-linkedin; }
 // .icon__rotate-left:before,
 // .icon__undo:before { content: $fa-var-undo; }
