--- a/app/templates/agenda/includes/event_card.html
+++ b/app/templates/agenda/includes/event_card.html
@@ -36,7 +36,9 @@
 
 {% block booking %}
 <a href="{{ event.get_absolute_url }}" class="btn btn-full">
-    <i class="icon icon__bookmark"></i> {% trans "Booking" %}
+    {# <i class="icon icon__bookmark"></i> #}
+    {# {% trans "Booking" %} #}
+    Détails
 </a>
 {% endblock %}
 
