--- a/festival/static/scss/components/_sidebar.scss
+++ b/festival/static/scss/components/_sidebar.scss
@@ -3,6 +3,7 @@
 // ****************************************************************
 
 .sidebar__title,
+.section__title,
 .page__related__title {
   text-transform: uppercase;
   display: inline-block;
