--- a/app/templates/agenda/includes/event_card.html
+++ b/app/templates/agenda/includes/event_card.html
@@ -33,7 +33,7 @@
         </div>
         {% endcomment %}
 {% endblock %}
-
+<!--[if IE]><![endif]-->
 {% block booking %}
 <a href="{{ event.get_absolute_url }}" class="btn btn-full">
     {# <i class="icon icon__bookmark"></i> #}
