--- a/app/festival/static/scss/index.scss
+++ b/app/festival/static/scss/index.scss
@@ -80,5 +80,6 @@
         'modules/bk-news',
         'modules/hero-slider',
         'modules/share-links',
+        'modules/push-calendar',
         'modules/calendar',
         'modules/user';
