--- a/app/festival/static/scss/modules/icons.scss
+++ b/app/festival/static/scss/modules/icons.scss
@@ -151,7 +151,7 @@
 // .icon__warning:before,
 // .icon__exclamation-triangle:before { content: $fa-var-exclamation-triangle; }
 // .icon__plane:before { content: $fa-var-plane; }
-// .icon__calendar:before { content: $fa-var-calendar; }
+.icon__calendar:before { content: $fa-var-calendar; }
 // .icon__random:before { content: $fa-var-random; }
 // .icon__comment:before { content: $fa-var-comment; }
 // .icon__magnet:before { content: $fa-var-magnet; }
@@ -422,7 +422,7 @@
 // .icon__long-arrow-left:before { content: $fa-var-long-arrow-left; }
 // .icon__long-arrow-right:before { content: $fa-var-long-arrow-right; }
 // .icon__apple:before { content: $fa-var-apple; }
-// .icon__windows:before { content: $fa-var-windows; }
+.icon__windows:before { content: $fa-var-windows; }
 // .icon__android:before { content: $fa-var-android; }
 // .icon__linux:before { content: $fa-var-linux; }
 // .icon__dribbble:before { content: $fa-var-dribbble; }
